--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delivery Food - Доставка еды на дом</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -13,7 +20,7 @@
         <img src="img\logo.svg" alt="Logo" class="logo" />
         <input
           type="text"
-          class="input search-input"
+          class="input input-address"
           placeholder="Адрес доставки"
         />
         <div class="buttons">
@@ -27,6 +34,25 @@
           </button>
         </div>
       </header>
+
+      <section class="promo">
+        <h1 class="promo-title">Онлайн-сервис <br />доставки еды на дом</h1>
+        <p class="promo-text">
+          Блюда из любимого ресторана привезет курьер в перчатках, маске и с
+          антисептиком
+        </p>
+      </section>
+
+      <section class="restaurants">
+        <div class="section-heading">
+          <h2 class="section-title">Рестораны</h2>
+          <input
+            type="text"
+            class="input input-search"
+            placeholder="Поиск блюд и ресторанов"
+          />
+        </div>
+      </section>
     </div>
   </body>
 </html>
