--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
             placeholder="Поиск блюд и ресторанов"
           />
         </div>
+        <div class="cards">
+          <div class="card">
+            <img src="img/image.png" alt="image" class="card-image" />
+            <div class="card-text">
+              <div class="card-heading">
+                <h3 class="card-title">Пицца плюс</h3>
+                <span class="card-tag tag">50 мин</span>
+              </div>
+              <div class="card-info"></div>
+            </div>
+          </div>
+          <!-- end card -->
+        </div>
+        <!-- end cards -->
       </section>
     </div>
   </body>
