--- a/index.html
+++ b/index.html
@@ -60,7 +60,105 @@
                 <h3 class="card-title">Пицца плюс</h3>
                 <span class="card-tag tag">50 мин</span>
               </div>
-              <div class="card-info"></div>
+              <div class="card-info">
+                <div class="rating">
+                  <img src="img/rating.svg" alt="rating" class="rating-star" />
+                  4.5
+                </div>
+                <div class="price">От 900 ₽</div>
+                <div class="category">Пицца</div>
+              </div>
+            </div>
+          </div>
+          <!-- end card -->
+
+          <div class="card">
+            <img src="img/tanuki.png" alt="image" class="card-image" />
+            <div class="card-text">
+              <div class="card-heading">
+                <h3 class="card-title">Тануки</h3>
+                <span class="card-tag tag">50 мин</span>
+              </div>
+              <div class="card-info">
+                <div class="rating">
+                  <img src="img/rating.svg" alt="rating" class="rating-star" />
+                  4.5
+                </div>
+                <div class="price">От 900 ₽</div>
+                <div class="category">Пицца</div>
+              </div>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card">
+            <img src="img/foodband.png" alt="image" class="card-image" />
+            <div class="card-text">
+              <div class="card-heading">
+                <h3 class="card-title">FoodBand</h3>
+                <span class="card-tag tag">50 мин</span>
+              </div>
+              <div class="card-info">
+                <div class="rating">
+                  <img src="img/rating.svg" alt="rating" class="rating-star" />
+                  4.5
+                </div>
+                <div class="price">От 900 ₽</div>
+                <div class="category">Пицца</div>
+              </div>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card">
+            <img src="img/jadina.png" alt="image" class="card-image" />
+            <div class="card-text">
+              <div class="card-heading">
+                <h3 class="card-title">Жадина-пицца</h3>
+                <span class="card-tag tag">50 мин</span>
+              </div>
+              <div class="card-info">
+                <div class="rating">
+                  <img src="img/rating.svg" alt="rating" class="rating-star" />
+                  4.5
+                </div>
+                <div class="price">От 900 ₽</div>
+                <div class="category">Пицца</div>
+              </div>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card">
+            <img src="img/tochka.png" alt="image" class="card-image" />
+            <div class="card-text">
+              <div class="card-heading">
+                <h3 class="card-title">Точка еды</h3>
+                <span class="card-tag tag">50 мин</span>
+              </div>
+              <div class="card-info">
+                <div class="rating">
+                  <img src="img/rating.svg" alt="rating" class="rating-star" />
+                  4.5
+                </div>
+                <div class="price">От 900 ₽</div>
+                <div class="category">Пицца</div>
+              </div>
+            </div>
+          </div>
+          <!-- end card -->
+          <div class="card">
+            <img src="img/pizzaburger.png" alt="image" class="card-image" />
+            <div class="card-text">
+              <div class="card-heading">
+                <h3 class="card-title">PizzaBurger</h3>
+                <span class="card-tag tag">50 мин</span>
+              </div>
+              <div class="card-info">
+                <div class="rating">
+                  <img src="img/rating.svg" alt="rating" class="rating-star" />
+                  4.5
+                </div>
+                <div class="price">От 900 ₽</div>
+                <div class="category">Пицца</div>
+              </div>
             </div>
           </div>
           <!-- end card -->
