--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="img\logo.svg" alt="Logo" class="logo" />
+        <a href="index.html" class="logo">
+          <img src="img\logo.svg" alt="Logo" class="logo" />
+        </a>
         <input
           type="text"
           class="input input-address"
@@ -56,7 +58,7 @@
             />
           </div>
           <div class="cards">
-            <div class="card">
+            <a href="restaurant.html" class="card">
               <img src="img/image.png" alt="image" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
@@ -76,10 +78,10 @@
                   <div class="category">Пицца</div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- end card -->
 
-            <div class="card">
+            <a href="restaurant.html" class="card">
               <img src="img/tanuki.png" alt="image" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
@@ -99,9 +101,9 @@
                   <div class="category">Суши, роллы</div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- end card -->
-            <div class="card">
+            <a href="restaurant.html" class="card">
               <img src="img/foodband.png" alt="image" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
@@ -121,9 +123,9 @@
                   <div class="category">Пицца</div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- end card -->
-            <div class="card">
+            <a href="restaurant.html" class="card">
               <img src="img/jadina.png" alt="image" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
@@ -143,9 +145,9 @@
                   <div class="category">Пицца</div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- end card -->
-            <div class="card">
+            <a href="restaurant.html" class="card">
               <img src="img/tochka.png" alt="image" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
@@ -165,9 +167,9 @@
                   <div class="category">Русская кухня</div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- end card -->
-            <div class="card">
+            <a href="restaurant.html" class="card">
               <img src="img/pizzaburger.png" alt="image" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
@@ -187,7 +189,7 @@
                   <div class="category">Пицца</div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- end card -->
           </div>
           <!-- end cards -->
