--- a/restaurant.html
+++ b/restaurant.html
@@ -17,7 +17,9 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="img\logo.svg" alt="Logo" class="logo" />
+        <a href="index.html" class="logo">
+          <img src="img\logo.svg" alt="Logo" class="logo" />
+        </a>
         <input
           type="text"
           class="input input-address"
@@ -52,7 +54,11 @@
           </div>
           <div class="cards">
             <div class="card">
-              <img src="img/image.png" alt="image" class="card-image" />
+              <img
+                src="img/image (1).png"
+                alt="image"
+                class="card-image-restaurant"
+              />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
@@ -78,14 +84,51 @@
             <!-- end card -->
 
             <div class="card">
-              <img src="img/tanuki.png" alt="image" class="card-image" />
+              <img
+                src="img/image (2).png"
+                alt="image"
+                class="card-image-restaurant"
+              />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
+                  <h3 class="card-title card-title-reg">
+                    Калифорния лосось стандарт
+                  </h3>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, лосось, авокадо, огурец, майонез, икра масаго,
+                    водоросли нори.
+                  </div>
+                </div>
+                <div class="card-buttons">
+                  <button class="button button-primary">
+                    <span class="button-card-text">В корзину</span>
+                    <img
+                      src="img/shopping-cart-white.svg"
+                      alt="shopping-cart"
+                      class="button-card-image"
+                    />
+                  </button>
+                  <strong class="card-price-bold">395 ₽</strong>
+                </div>
+              </div>
+            </div>
+            <!-- end card -->
+            <div class="card">
+              <img
+                src="img/image (3).png"
+                alt="image"
+                class="card-image-restaurant"
+              />
+              <div class="card-text">
+                <div class="card-heading">
+                  <h3 class="card-title card-title-reg">Окинава стандарт</h3>
+                </div>
+                <div class="card-info">
+                  <div class="ingredients">
+                    Рис, креветка отварная, сыр сливочный, лосось, огурец
+                    свежий.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -103,14 +146,19 @@
             </div>
             <!-- end card -->
             <div class="card">
-              <img src="img/foodband.png" alt="image" class="card-image" />
+              <img
+                src="img/image (4).png"
+                alt="image"
+                class="card-image-restaurant"
+              />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
+                  <h3 class="card-title card-title-reg">Цезарь маки хl</h3>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, куриная грудка копченая, икра масаго, томат, айсберг,
+                    соус цезарь.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -128,14 +176,21 @@
             </div>
             <!-- end card -->
             <div class="card">
-              <img src="img/jadina.png" alt="image" class="card-image" />
+              <img
+                src="img/image (5).png"
+                alt="image"
+                class="card-image-restaurant"
+              />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
+                  <h3 class="card-title card-title-reg">
+                    Ясай маки стандарт 185 г
+                  </h3>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, помидор свежий, перец болгарский, авокадо, огурец,
+                    айсберг.
                   </div>
                 </div>
                 <div class="card-buttons">
@@ -153,39 +208,21 @@
             </div>
             <!-- end card -->
             <div class="card">
-              <img src="img/tochka.png" alt="image" class="card-image" />
+              <img
+                src="img/image (6).png"
+                alt="image"
+                class="card-image-restaurant"
+              />
               <div class="card-text">
                 <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
+                  <h3 class="card-title card-title-reg">
+                    Ролл с креветкой стандарт
+                  </h3>
                 </div>
                 <div class="card-info">
                   <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
-                  </div>
-                </div>
-                <div class="card-buttons">
-                  <button class="button button-primary">
-                    <span class="button-card-text">В корзину</span>
-                    <img
-                      src="img/shopping-cart-white.svg"
-                      alt="shopping-cart"
-                      class="button-card-image"
-                    />
-                  </button>
-                  <strong class="card-price-bold">250 ₽</strong>
-                </div>
-              </div>
-            </div>
-            <!-- end card -->
-            <div class="card">
-              <img src="img/pizzaburger.png" alt="image" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
-                </div>
-                <div class="card-info">
-                  <div class="ingredients">
-                    Рис, угорь, соус унаги, кунжут, водоросли нори.
+                    Рис, водоросли нори, креветки отварные, сыр сливочный,
+                    огурцы.
                   </div>
                 </div>
                 <div class="card-buttons">
