--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <a href="index.html" class="logo animate__animated animate__pulse">
+        <a href="index.html" class="logo">
           <img src="img\logo.svg" alt="Logo" class="logo" />
         </a>
         <input
@@ -57,7 +57,10 @@
             </div>
           </div>
           <div class="cards">
-            <div class="card">
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.2s"
+            >
               <img
                 src="img/image (1).png"
                 alt="image"
@@ -87,7 +90,10 @@
             </div>
             <!-- end card -->
 
-            <div class="card">
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.4s"
+            >
               <img
                 src="img/image (2).png"
                 alt="image"
@@ -119,7 +125,10 @@
               </div>
             </div>
             <!-- end card -->
-            <div class="card">
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.6s"
+            >
               <img
                 src="img/image (3).png"
                 alt="image"
@@ -149,7 +158,10 @@
               </div>
             </div>
             <!-- end card -->
-            <div class="card">
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.2s"
+            >
               <img
                 src="img/image (4).png"
                 alt="image"
@@ -179,7 +191,10 @@
               </div>
             </div>
             <!-- end card -->
-            <div class="card">
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.4s"
+            >
               <img
                 src="img/image (5).png"
                 alt="image"
@@ -211,7 +226,10 @@
               </div>
             </div>
             <!-- end card -->
-            <div class="card">
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.6s"
+            >
               <img
                 src="img/image (6).png"
                 alt="image"
@@ -335,6 +353,7 @@
         </div>
       </div>
     </div>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
